--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -1,4 +1,6 @@
 <p id="notice"><%= notice %></p>
 
+<%= link_to @link.title, @link.url %> |
+
 <%= link_to 'Edit', edit_link_path(@link) %> |
 <%= link_to 'Back', links_path %>
