--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -14,8 +14,8 @@
   <tbody>
     <% @comments.each do |comment| %>
       <tr>
-        <td><%= comment.user_id %></td>
-        <td><%= comment.body %></td>
+        <td><%= comment.user_name%></td>
+        <td><%= comment.body.truncate(17, separator: ' ')%></td>
         <td><%= link_to 'Show', comment %></td>
         <td><%= link_to 'Edit', edit_comment_path(comment) %></td>
         <td><%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
