--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <strong>User:</strong>
-  <%= @comment.user_id %>
+  <%= @comment.user_name %>
 </p>
 
 <p>
@@ -10,5 +10,5 @@
   <%= @comment.body %>
 </p>
 
-<%= link_to 'Edit', edit_comment_path(@comment) %> |
-<%= link_to 'Back', comments_path %>
+<%= link_to 'Edit', edit_link_comment_path(@link, @comment) %> |
+<%= link_to 'Back', link_path(@link) %>
