--- a/app/views/comments/_edit_form.html.erb
+++ b/app/views/comments/_edit_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@comment, url: link_comments_path(@link)) do |f| %>
+<%= form_for(@comment, url: link_comment_path(@link, @comment)) do |f| %>
   <% if @comment.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
