--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -1,5 +1,10 @@
 <p id="notice"><%= notice %></p>
 
+<div class="panel">
+	<%= link_to @link.title, @link.url %> |
+	<%= link_to 'Edit', edit_link_path(@link) %> |
+	<%= link_to 'Back', links_path %>
+</div>
 
 <% @link.comments.each do |comment| %>
       <tr>
