--- a/app/views/links/_form.html.erb
+++ b/app/views/links/_form.html.erb
@@ -19,6 +19,10 @@
     <%= f.label :url, "URL:" %><br>
     <%= f.text_field :url, class: 'form-control' %>
   </div>
+  <div class="field form-group">
+    <%= f.label :tags, "Tags:" %><br>
+    <%= f.text_field :tags, class: 'form-control' %>
+  </div>
   <div class="actions">
     <%= f.submit class: 'btn btn-primary' %>
   </div>
