--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,8 @@
   <nav class="navbar navbar-default">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="<%= root_path %>">SOR 2015 Reddit</a>
+        <a class="navbar-brand" href="<%= root_path %>">gelesenes</a>
+        <%= image_tag("reddit.png", width: "9%") %>
       </div>
 
       <div class="collapse navbar-collapse">
