--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -3,6 +3,12 @@
 
 <h1>Listing Links</h1>
 
+
+  <% unless @tag.nil? %>
+    <div>Filter: <a class="btn btn-default btn-xs" disabled="true"><%= @tag %></a><%= link_to 'X', '/links', class:"btn btn-xs btn-warning"%></div><br>
+  <% end %>
+
+
 <div class="table-responsive">
   <table class="table table-hover">
     <tbody>
@@ -27,4 +33,4 @@
 </div>
 <br>
 
-<%= link_to 'New Link', new_link_path %>
+<p><%= link_to 'New Link', new_link_path, class:"btn btn-default" %></p>
