--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -3,6 +3,7 @@
 
 <h1>Listing Links</h1>
 
+<%= link_to "Most popular", rankings_path %>
 <div class="table-responsive">
   <table class="table table-hover">
     <tbody>
@@ -11,8 +12,8 @@
           <td style="padding: 5px;">
             <%= link_to link.title, link.url %><br>
             <div>
-              <%= link_to 'Kommentare', link %> | 
-              <%= link_to 'Edit', edit_link_path(link) %> | 
+              <%= link_to 'Kommentare', link %> |
+              <%= link_to 'Edit', edit_link_path(link) %> |
               <%= link_to 'Destroy', link, method: :delete, data: { confirm: 'Are you sure?' } %>
             </div>
             <%= link_to '', like_link_path(link), class:"glyphicon glyphicon-thumbs-up" %> <%= @likes[link.id] %>
