--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -12,15 +12,20 @@
 </div>
 
 <% @link.comments.each do |comment| %>
+  <table class="commentsTable">
+    <tbody>
       <tr>
-        <td><%= comment.user_name%> wrote:</td> 
+        <td><%= comment.user_name%> wrote:</td>
         <td><%= comment.body.truncate(37, separator: ' ')%></td>
-        <div>
-              <%= link_to 'Show', link_comment_path(@link, comment)  %> | 
-              <%= link_to 'Edit', edit_link_comment_path(@link, comment) %> | 
-              <%= link_to 'Destroy', link_comment_path(@link, comment), method: :delete, data: { confirm: 'Are you sure?' } %>
-            </div>
+        <td>
+          <div>
+            <%= link_to 'Show', link_comment_path(@link, comment)  %> |
+            <%= link_to 'Edit', edit_link_comment_path(@link, comment) %> |
+            <%= link_to 'Destroy', link_comment_path(@link, comment), method: :delete, data: { confirm: 'Are you sure?' } %>
+          </div>
+        </td>
       </tr>
+    </tbody>
+  </table>
     <% end %>
 <p><%= link_to 'New Comment', new_link_comment_path(@link) %></p>
-
