kommentare mit url

--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -10,5 +10,10 @@
   <%= @comment.body %>
 </p>
 
+<p>
+  <strong>Link:</strong>
+  <%= @comment.url %>
+</p>
+
 <%= link_to 'Edit', edit_link_comment_path(@link, @comment) %> |
 <%= link_to 'Back', link_path(@link) %>
