--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 <p id="alert"><%= alert %></p>
 
-<h1>Listing Links</h1>
+<h1>New Links</h1>
 
 <div class="table-responsive">
   <table class="table table-hover">
