--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -21,6 +21,6 @@
               <%= link_to 'Destroy', link_comment_path(@link, comment), method: :delete, data: { confirm: 'Are you sure?' } %>
             </div>
       </tr>
-    <% end %>
+    <% end %></br>
 <p><%= link_to 'New Comment', new_link_comment_path(@link) %></p>
 
