--- a/app/views/comments/_edit_form.html.erb
+++ b/app/views/comments/_edit_form.html.erb
@@ -15,11 +15,15 @@
     <%= f.label :user_id%>
     <%= ": #{current_user.name}"%>
   </div>
-  <div class="field">
-    <%= f.label :body %><br>
-    <%= f.text_area :body %>
+  <div class="field form-group">
+    <%= f.label :body, "Text:" %><br>
+    <%= f.text_field :body, class: 'form-control' %>
+   </div>   
+  <div class="field form-group">
+    <%= f.label :url, "URL:" %><br>
+    <%= f.text_field :url, class: 'form-control' %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: 'btn btn-primary' %>
   </div>
 <% end %>
