color for navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <nav class="navbar navbar-default">
+  <nav class="navbar navbar-default" style="background-color: #cee3f8;">
     <div class="container">
       <div class="navbar-header">
         <a class="navbar-brand" href="<%= root_path %>">gelesenes</a>
